--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <button onclick="toggleSwitch()">Switch 2</button>
         </div>
         <hr>
+        <!-- //Light is on in detected Area -->
         <div class="detectArea">
           Detected Area
         </div>
@@ -82,6 +83,7 @@
                 lightOn();
             }
           }
+          
           document.querySelector(".detectArea").addEventListener("mouseenter",function(){
             lightOn()
             setTimeout(lightOff,3000);
